--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -17,7 +17,7 @@ spec:
       containers: 
         - 
           name: "product"
-          image: "ungacr.azurecr.io/product:latest"
+          image: "user04.azurecr.io/product:latest"
           ports: 
             - 
               containerPort: 80
